2006-11-01  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* builtins.def (gamma, lgamma): Use ATTR_MATHFN_FPROUNDING_STORE.

2006-10-31  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR rtl-optimization/29631
	* loop.c (basic_induction_var): Add new parameter inner_mode.
	<PLUS>: If set, convert the increment to it before sign-extending.
	<CONST_INT>: Likewise.
	<SUBREG>: Set it.
	<ASHIFTRT>: Likewise.  Return 0 if flag_wrapv.
	(check_insn_for_bivs): Pass VOIDmode as inner_mode to above.

2006-10-30  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/29637
	* tree.c (make_vector_type): Don't recurse if TYPE_MAIN_VARIANT
	of the innertype is the innertype itself.

2006-10-28 Uros Bizjak <uros@kss-loka.si>

	PR target/29377
	* config/h8300/h8300.c (h8300_emit_stack_adjustment): Change "size"
	argument to HOST_WIDE_INT.  Update function prototype.
	(round_frame_size): Change return type to HOST_WIDE_INT.  Change
	"size" argument to HOST_WIDE_INT.  Update function prototype.

2006-10-26  Andreas Krebbel  <krebbel1@de.ibm.com>

	* config/s390/s390.c (s390_init_frame_layout): Check positive
	frame_size.

2006-10-25  Steve Ellcey  <sje@cup.hp.com>

	* config/ia64/hpux.h: Define _INCLUDE__STDC_A1_SOURCE in C++.
	Add unix98.o to link line.

2006-10-25  Paolo Bonzini  <bonzini@gnu.org>

	PR c/29092
	* c-typeck.c (digest_init): Always allow initializing vectors
	that have static storage duration with compound literals.
	* tree.c (build_type_attribute_qual_variant): New, based on
	build_type_attribute_variant.
	(build_type_attribute_variant): Rewrite using the former.
	(make_vector_type): Use build_type_attribute_qual_variant to build
	type variants.  Use type_hash_canon on the others.

2006-10-23  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/s390/predicates.md ("bras_sym_operand"): Do not accept
	nonlocal function symbols if flag_pic.

2006-10-19  Eric Botcazou  <ebotcazou@adacore.com>

	* fold-const.c (add_double): Rename to add_double_with_sign.