@@ -1,0 +1,32 @@
+/* PR rtl-optimization/28970 */
+/* Origin: Peter Bergner <bergner@vnet.ibm.com> */
+
+extern void abort (void);
+
+int tar (int i)
+{
+  if (i != 36863)
+    abort ();
+
+  return -1;
+}
+
+void bug(int q, int bcount)
+{
+  int j = 0;
+  int outgo = 0;
+
+  while(j != -1)
+    {
+      outgo++;
+      if (outgo > q-1)
+        outgo = q-1;
+      j = tar (outgo*bcount);
+    }
+}
+
+int main(void)
+{
+  bug(5, 36863);
+  return 0;
+}
